--- a/pricing-plan-cards/src/components/card/Card.css
+++ b/pricing-plan-cards/src/components/card/Card.css
@@ -1,10 +1,3 @@
-.card {
-  background-color: #242c44;
-  color: #fff;
-  border-radius: 20px;
-  padding: 5% 6%;
-}
-
 h3 {
   font-size: 1.8rem;
   font-weight: 650;
@@ -12,7 +5,7 @@ h3 {
 
 p {
   font-size: 0.9rem;
-  font-weight: 350;
+  font-weight: 800;
 }
 
 h3 {
@@ -26,4 +19,58 @@ p {
 h2 {
   font-size: 1.5rem;
   margin-bottom: 10px;
+}
+
+.card-1,
+.card-2,
+.card-3 {
+  background-color: #242c44;
+  color: #fff;
+  border-radius: 20px;
+  padding: 5% 6%;
+}
+
+.submit1 {
+  padding: 7px 45px;
+  display: block;
+  font-size: 1rem;
+  font-weight: 450;
+  cursor: pointer;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  text-align: center;
+  position: relative;
+  left: 4px;
+  top: 27%;
+}
+
+.submit2 {
+  padding: 7px 45px;
+  display: block;
+  font-size: 1rem;
+  font-weight: 450;
+  cursor: pointer;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  text-align: center;
+  position: relative;
+  left: 25px;
+  top: 17%;
+}
+
+.submit3 {
+  padding: 7px 45px;
+  display: block;
+  font-size: 1rem;
+  font-weight: 450;
+  cursor: pointer;
+  border-radius: 12px;
+  border: none;
+  outline: none;
+  text-align: center;
+  position: relative;
+  left: 25px;
+  top: 8%;
 }
